--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       body {
         text-align: center;
         background: url('./imagens/fundo.png');
-        background-size: auto;
+        background-size: 100%;
         color: white;
         font-family: Arial, Helvetica, sans-serif;
       }
@@ -54,7 +54,7 @@
       }
 
       .button:hover {
-        background-color: rgba(143, 60, 190, 0.342);
+        background-color: rgba(194, 100, 178, 0.527);
         color: white;
         margin-bottom: 10px;
       }
